--- a/src/index.html
+++ b/src/index.html
@@ -146,11 +146,11 @@
 				</div>
 				<div class="counter-block">
 					<div class="counter-block-option">Количество людей</div>
-					<input type="number"  min="1" step="1" class="counter-block-input">
+					<input type="text" maxlength="15" name="people" min="1" step="1" class="counter-block-input">
 				</div>
 				<div class="counter-block">
 					<div class="counter-block-option">На сколько дней</div>
-					<input type="number"  min="1" step="1" class="counter-block-input">
+					<input type="text" maxlength="15" name="days" min="1" step="1" class="counter-block-input">
 				</div>
 				<div class="counter-block">
 					<div class="counter-block-option">Выберете базу</div>
