--- a/src/index.html
+++ b/src/index.html
@@ -174,8 +174,8 @@
 						Мы с вами свяжемся
 					</div>
 					<form id="form">
-						<input required type="email" name="email" placeholder="Ваша почта">
-						<input required type="tel" pattern="^[0-9+]*$" name="tel" placeholder="Ваш телефон">
+						<input required type="text" name="email" placeholder="Ваша почта">
+						<input required type="text" name="tel" placeholder="Ваш телефон">
 						<button type="submit">Отправить</button>
 					</form>
 				</div>
